--- a/package.json
+++ b/package.json
@@ -9,10 +9,9 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
-    "date-fns": "^2.13.0",
-    "got": "^11.1.2",
-    "next": "9.3.6",
+    "next": "9.4.0",
     "postcss-preset-env": "^6.7.0",
+    "prism-react-renderer": "^1.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "tailwindcss": "^1.4.6",
@@ -21,10 +20,10 @@
   "devDependencies": {
     "@types/classnames": "^2.2.10",
     "@types/node": "^13.13.5",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
-    "@typescript-eslint/eslint-plugin": "^2.31.0",
-    "@typescript-eslint/parser": "^2.31.0",
+    "@types/react": "^16.9.35",
+    "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^2.32.0",
+    "@typescript-eslint/parser": "^2.32.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -33,7 +32,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^4.0.0",
     "prettier": "^2.0.5",
-    "sitemap": "^6.1.2",
+    "sitemap": "^6.1.3",
     "typescript": "^3.8.3"
   }
 }
