--- a/package.json
+++ b/package.json
@@ -15,26 +15,27 @@
     "prism-react-renderer": "^1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "tailwindcss": "^1.4.6",
-    "twemoji": "^13.0.0"
+    "tailwindcss": "^1.5.2",
+    "twemoji": "^13.0.1"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.10",
-    "@types/node": "^14.0.6",
-    "@types/react": "^16.9.35",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "3.0.2",
-    "@typescript-eslint/parser": "3.0.2",
+    "@typescript-eslint/eslint-plugin": "3.7.0",
+    "@typescript-eslint/parser": "3.7.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "prettier": "^2.0.5",
-    "sitemap": "^6.1.5",
-    "typescript": "^3.9.3"
+    "sitemap": "^6.2.0",
+    "typescript": "^3.9.7"
   }
 }
