--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,7 +32,8 @@
         "import/default": "off",
         "import/no-duplicates": "off",
         "import/no-named-as-default": "off",
-        "@typescript-eslint/explicit-module-boundary-types": "off"
+        "@typescript-eslint/explicit-module-boundary-types": "off",
+        "react/prop-types": "off"
       },
       "settings": {
         "import/parsers": {
